--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.3.0",
     "gatsby-awesome-pagination": "^0.3.8",
+    "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-sass": "^5.4.0",
+    "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-styled-components": "^5.4.0",
+    "gatsby-source-filesystem": "^4.6.0",
     "gatsby-source-graphql": "^4.3.0",
     "gatsby-source-wordpress": "^6.3.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.45.1",
